# dog-cat

./: .gitignore  README.md
bff/: index.ts  package.json  pnpm-lock.yaml
bff/routes/: batchClassify.ts  classify.ts
bff/types/: index.ts
bff/utils/: errorResponse.ts
docs/: index.md  引言.md
server/: README.md  app.py  mobilenet_classifier.py  package.json  pnpm-lock.yaml  pyproject.toml  train_model.py  tsconfig.json
server/middleware/: cors.ts
server/python/: README.md  app.py  mobilenet_classifier.py  requirements.txt
server/routes/: classify.ts  history.ts
shared/: types.ts
web/: .eslintrc.json  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json
web/src/: App.tsx  entry.tsx  index.tsx
web/src/api/: index.ts  types.ts
web/src/components/: BatchProcessor.tsx  HistoryViewer.tsx  ImageClassifier.tsx  Test.tsx
web/src/constant/: index.ts
web/src/styles/: app.css
